[gd_scene load_steps=11 format=3 uid="uid://56rclc6ifi31"]

[ext_resource type="Script" uid="uid://7fgydsh0rt7n" path="res://Scripts/TumbangPreso/time_bar.gd" id="1_l6pe8"]
[ext_resource type="Script" uid="uid://8f6l8gtfy5wu" path="res://Scripts/TumbangPreso/pointer.gd" id="2_otqeo"]
[ext_resource type="Texture2D" uid="uid://bfsuh3ugmc8ue" path="res://Assets/Art/Props/coin4_16x16.png" id="3_ycl1n"]
[ext_resource type="Script" uid="uid://brip45p6numnh" path="res://Scenes/TumbangPreso/success_region.gd" id="4_c5if7"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bpmpd"]
atlas = ExtResource("3_ycl1n")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_i2gnn"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bpmpd")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_awd3f"]
size = Vector2(48, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0ftpc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5wt62"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6rea"]
size = Vector2(20, 40)

[node name="time_bar" type="Node2D"]
position = Vector2(289, 155)
script = ExtResource("1_l6pe8")

[node name="pointer" type="CharacterBody2D" parent="."]
motion_mode = 1
script = ExtResource("2_otqeo")

[node name="coin_icon" type="AnimatedSprite2D" parent="pointer"]
z_index = 2
position = Vector2(250, 20)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_i2gnn")

[node name="Area2D" type="Area2D" parent="pointer" groups=["pointer"]]

[node name="pointer_area" type="CollisionShape2D" parent="pointer/Area2D" groups=["pointer"]]
z_index = 1
position = Vector2(250, 20)
shape = SubResource("RectangleShape2D_awd3f")

[node name="background" type="ColorRect" parent="."]
offset_right = 503.0
offset_bottom = 40.0
metadata/_edit_use_anchors_ = true

[node name="Button" type="Button" parent="."]
visible = false
offset_left = 7.0
offset_top = 25.0
offset_right = 702.0
offset_bottom = 304.0

[node name="right_boundary" type="Area2D" parent="." groups=["right_boundary"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="right_boundary" groups=["right_boundary"]]
position = Vector2(510, 20)
shape = SubResource("RectangleShape2D_0ftpc")

[node name="left_boundary" type="Area2D" parent="." groups=["left_boundary"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="left_boundary" groups=["left_boundary"]]
position = Vector2(-5, 20)
shape = SubResource("RectangleShape2D_5wt62")

[node name="success_region" type="Area2D" parent="." groups=["success_area"]]
script = ExtResource("4_c5if7")

[node name="CollisionShape2D" type="CollisionShape2D" parent="success_region" groups=["success_area"]]
position = Vector2(102, 20)
shape = SubResource("RectangleShape2D_t6rea")

[node name="region_indicator" type="ColorRect" parent="success_region"]
z_index = 3
offset_left = 92.0
offset_right = 112.0
offset_bottom = 40.0
color = Color(0.4, 0.886275, 0.227451, 1)

[connection signal="area_entered" from="pointer/Area2D" to="pointer" method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="pointer/Area2D" to="pointer" method="_on_area_2d_area_exited"]
